Fix contrast error for .sr-only

--- a/custom.css
+++ b/custom.css
@@ -60,3 +60,7 @@ main a:hover {
 	color: #000000;
 }
 
+/*Fix contrast error for .sr-only*/
+.sr-only {
+	color: #000000;
+}
